Fix bug with product edit popup overlapping admin info table

--- a/src/main/webapp/common/components/edit-product/styles/style.css
+++ b/src/main/webapp/common/components/edit-product/styles/style.css
@@ -2,7 +2,7 @@
   visibility: hidden;
 
   position: fixed;
-  z-index: 2;
+  z-index: 3;
 
   display: flex;
   justify-content: center;
